[package]
edition = "2024"
name = "black_pill_template"
version = "0.1.0"

[features]
default = ["vlf4r1"]
vlf4r1 = []
vlf4r2 = []

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "memory-x",
    "stm32h723vg",
    "time-driver-any",
    "exti",
    "unstable-pac",
    "defmt",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "tick-hz-1_000_000",
    "defmt",
    "defmt-timestamp-uptime",
] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = "0.9.1"
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
nalgebra = { version = "0.34.0", default-features = false, features = [
    "libm-force",
] }
biquad = "0.5.0"
micromath = "2.1.0"
embedded-io-async = "0.6.1"
nmea = { version = "0.7.0", default-features = false, features = [
    "defmt-03",
    "GGA",
    "GLL",
    "GSA",
    "GSV",
    "RMC",
] }
chrono = { version = "0.4.26", default-features = false }

[[bin]]
name = "tilt_template"
path = "src/tilt_template.rs"
test = false
bench = false

[[bin]]
name = "gps_template"
path = "src/gps_template.rs"
test = false
bench = false

[[bin]]
name = "main_tilt"
path = "src/solutions/tilt.rs"
test = false
bench = false

[[bin]]
name = "main_gps"
path = "src/solutions/gps.rs"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = true
lto = true
opt-level = "z"
incremental = true
